[gd_scene load_steps=7 format=3 uid="uid://4rfi5rsn18hi"]

[ext_resource type="Script" uid="uid://bumucuec8el58" path="res://scripts/player_attacks/sword_slash.gd" id="1_05dof"]
[ext_resource type="Texture2D" uid="uid://bybjddmr3dqsn" path="res://assets/player_attack_assets/spinning_sword_slash.png" id="2_05dof"]

[sub_resource type="Animation" id="Animation_isa8b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_05dof"]
resource_name = "slash"
length = 0.3
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2l545"]
_data = {
&"RESET": SubResource("Animation_isa8b"),
&"slash": SubResource("Animation_05dof")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_05dof"]
radius = 36.124783

[node name="SwordSlash" type="Area2D"]
script = ExtResource("1_05dof")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 0.7853982
texture = ExtResource("2_05dof")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2l545")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.1920929e-07, 5)
rotation = 0.7853982
shape = SubResource("CircleShape2D_05dof")
debug_color = Color(0.9993934, 0, 0.12844995, 0.41960785)

[node name="SlashDuration" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SlashDuration" to="." method="_on_slash_duration_timeout"]
